# conch

./: CMakeLists.txt  main.c  stm8s_it.c  stm8s_it.h  toolchain-stm8.cmake
drivers/STM8S_StdPeriph_Driver/inc/: stm8s.h
hal/: base.c  battery.c  led.c  motor.c  sys.c  touch.c  uart.c
hal/include/: base.h  battery.h  led.h  motor.h  sys.h  touch.h  uart.h
script/: build.sh  flash.sh
